api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: animal-api
  namespace: animal-api
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: animal-api
