api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: animal-api-ingress
  namespace: animal-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: animal-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: animal-api
            port:
              number: 8000
